--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
 		"svelte": "^5.0.0",
 		"svelte-preprocess": "^6.0.3",
 		"vite": "^5.4.11"
+	},
+	"dependencies": {
+		"svelte-i18n": "^4.0.1"
 	}
 }
