--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
-		"sass-embedded": "^1.83.1",
+		"sass": "^1.83.4",
 		"svelte": "^5.0.0",
 		"svelte-preprocess": "^6.0.3",
 		"vite": "^5.4.11"
